kubernetes/apps/attack-simulation/ares/app/nats-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: attack-simulation
spec:
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
      name: client
    - port: 8222
      targetPort: 8222
      name: monitor
  type: ClusterIP
