kubernetes/apps/attack-simulation/ares/app/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: attack-simulation
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  type: ClusterIP
